# vs_spredit

./: .gitignore  AGENTS.md  CMakeLists.txt  Makefile  README.md  image_item.h  spr_parser.h  test.cpp  vegastrike_animation.cpp  vs_anim.cfg
.github/workflows/: build.yml  ci.yml
